--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/estore
-spring.datasource.username=root
-spring.datasource.password
+spring.datasource.url=jdbc:mysql://bhwvekubjk4wrsvuqv8o-mysql.services.clever-cloud.com:3306/bhwvekubjk4wrsvuqv8o
+spring.datasource.username=uvaj1ypkegbjnqgg
+spring.datasource.password=sLhaSLjlIlqXwN5H6i5h
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
